--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
@@ -10,5 +13,11 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "ts-jest": "^29.1.2"
   }
 }
