--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ BSC_LLA_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 BSC_PRIVATE_KEY=your_private_key_here
 
 # Database Configuration
-DATABASE_URL=postgres://username:password@localhost:5432/erbie_bsc_relayer
+DATABASE_URL=mysql://username:password@localhost:3306/erbie_bsc_relayer
 
 # Note: For testnet environment, use NODE_ENV=testnet
 # For mainnet environment, use NODE_ENV=mainnet
