--- a/.env.mainnet
+++ b/.env.mainnet
@@ -8,4 +8,4 @@ BSC_LLA_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 BSC_PRIVATE_KEY=your_private_key_here
 
 # Database Configuration
-DATABASE_URL=postgres://username:password@localhost:5432/erbie_bsc_relayer_mainnet
+DATABASE_URL=mysql://username:password@localhost:3306/erbie_bsc_relayer_mainnet
