--- a/.env.testnet
+++ b/.env.testnet
@@ -8,4 +8,4 @@ BSC_LLA_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 BSC_PRIVATE_KEY=your_private_key_here
 
 # Database Configuration
-DATABASE_URL=mysql://username:password@localhost:3306/erbie_bsc_relayer_testnet
+DATABASE_URL=mysql://root:123456@localhost:3306/relayer_testnet
