--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
